nexus/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: nexus
  namespace: nexus
spec:
  ports:
  - port: 8081
    name: nexus-web
  - port: 8082
    name: nexus-repo
  selector:
    app: nexus
  type: LoadBalancer
