nexus/route.yaml
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    openshift.io/host.generated: "true"
  name: nexus-repo
spec:
  port:
    targetPort: nexus-repo
  tls:
    termination: edge
  to:
    kind: Service
    name: nexus
    weight: 100
  wildcardPolicy: None
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    openshift.io/host.generated: "true"
  name: nexus-web
spec:
  port:
    targetPort: nexus-web
  to:
    kind: Service
    name: nexus
    weight: 100
  wildcardPolicy: None
